# radix

./: .gitignore  LICENSE  docker-compose.yml
client/: package.json  tsconfig.json
client/src/components/layout/: layout.tsx  navbar.tsx
client/src/components/problems/: difficulty-tag.tsx  problem-editor.tsx  problem-view.tsx  single-problem-selection.tsx
client/src/components/rooms/: chat.tsx  create-room.tsx  editors.tsx  pick-problems.tsx  room-provider.tsx  side-panel.tsx  test-results.tsx  top-bar.tsx
client/src/components/ui/: authed.tsx  axios-error-message.tsx  error-message.tsx  markdown-editor.tsx  markdown-render.tsx  on-bottom.tsx  uh-oh.tsx
client/src/lib/: global.css  markdown.css  query.ts
client/src/lib/auth/: adapter.ts  provider.ts
client/src/lib/hooks/: use-is-mobile.ts  use-room.ts  use-zod-form.ts
client/src/pages/: _app.tsx  _document.tsx  index.tsx  problems.tsx
client/src/types/: next-auth.d.ts  problem.ts  user.ts
client/src/utils/: axios.ts  consts.ts  enum.ts
server/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
server/src/: build.rs  context.rs  errors.rs  main.rs  mongo.rs  recovery.rs  rejections.rs
server/src/filters/: auth.rs
server/src/models/: problem.rs  user.rs
server/src/redis/: channels.rs  mod.rs  redis.rs
server/src/rooms/: chat.rs  connection.rs  judge.rs  mod.rs  room.rs
server/src/rooms/proxies/: room.rs
server/src/rooms/templates/: python-runner.py
server/src/routers/: auth.rs  mod.rs  problems.rs  rooms.rs
server/src/utils/: auth.rs  errors.rs  mod.rs  mongo.rs
(+5 files in other folders)
