[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
axum = "0.5.17"
chrono = { version = "0.4.22", features = ["serde"] }
dotenvy = "0.15.6"
log = "0.4.17"
mongodb = "2.3.1"
parking_lot = "0.12.1"
pretty_env_logger = "0.4.0"
reqwest = "0.11.12"
serde = "1.0.147"
tokio = { version = "1.21.2", features = ["full"] }
