[package]
name = "radix_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-recursion = "1.0.0"
axum = { version = "0.6.1", features = ["ws"] }
chrono = { version = "0.4.22", features = ["serde"] }
dotenvy = "0.15.6"
# for mongodb find_many
futures = "0.3.24"
futures-util = "0.3.25"
lazy_static = "1.4.0"
log = "0.4.17"
mongodb = "2.3.1"
parking_lot = "0.12.1"
piston_rs = "0.4.3"
pretty_env_logger = "0.4.0"
regex = "1.7.0"
reqwest = "0.11.12"
serde = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }

